--- a/theme/dev/style.css
+++ b/theme/dev/style.css
@@ -360,7 +360,7 @@ iframe {
 	margin-bottom: 30px;
 }
 .header-nav ul > li + li {
-	border-top: 1px dotted #666666;
+	border-top: 1px dashed #CCC;
 	padding-top: 10px;
 	margin-top: 10px;
 }
@@ -369,7 +369,7 @@ iframe {
 	font-weight: bold;
 	margin: 15px 0;
 	padding: 5px 0;
-	border-bottom: 2px solid #333333;
+	border-bottom: 1px solid #333;
 }
 .main-outer {
 	padding: 50px;
@@ -383,7 +383,7 @@ iframe {
 
 .main-content,
 .sub-content {
-	background: #FFFFFF;
+	background: #FFF;
 	padding: 30px;
 }
 .main-eyecatch {
@@ -640,6 +640,7 @@ INDEX
 .post {
 	background: #FFFFFF;
 	box-shadow: 0 1px 3px rgba(34, 25, 25, 0.2);
+	border-radius: 4px;
 	float: left;
 	font-size: 12px;
 	margin: 1px;
@@ -651,6 +652,7 @@ INDEX
 .post-content {
 	background: #FFFFFF;
 	padding: 20px;
+	background: transparent;
 }
 .post-content-inner > * + * {
 	margin-top: 10px;
@@ -663,6 +665,7 @@ INDEX
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
+	border-radius: 4px 4px 0 0;
 }
 .post-image img {
 	width: 100%;
