--- a/theme/dev/style.css
+++ b/theme/dev/style.css
@@ -44,11 +44,11 @@ JSS
 	position: relative;
 	max-width: 100%;
 	margin: 0 auto;
-	transition: width 1s ease;
-	visibility: hidden;
+	transition: width .5s ease, opacity .5s ease;
+	opacity: 1;
 }
-.jss-gridlayout.is-show {
-	visibility: visible;
+.jss-gridlayout.is-standby {
+	opacity: 0;
 }
 
 /*****************************************
@@ -645,7 +645,10 @@ INDEX
 	font-size: 12px;
 	margin: 1px;
 	width: 280px;
-	transition: top 1s ease, left 1s ease;
+	transition: top .5s ease, left .5s ease, opacity .5s ease;
+}
+.post.is-standby {
+	opacity: 0;
 }
 .post-noimage {
 }
