--- a/theme/dev/style.css
+++ b/theme/dev/style.css
@@ -688,8 +688,19 @@ SP
 	.ssba > * > a + a {
 		margin-left: 4px;
 	}
+	.header {
+		display: table;
+		width: 100%;
+	}
 	.header-logo {
 		text-align: left;
+		display: table-cell;
+		vertical-align: middle;
+	}
+	.header-menu {
+		display: table-cell;
+		vertical-align: middle;
+		text-align: right;
 	}
 	.header-title:after {
 		content: "";
@@ -706,6 +717,56 @@ SP
 	.header-title > p {
 		float: left;
 	}
+	.header-title > .ttl-lv1 {
+		font-size: 18px;
+	}
+	.header-title > * + * {
+		margin-top: 10px;
+	}
+	.header-outer {
+		position: fixed;
+		height: 60px;
+		top: 0;
+		left: 0;
+		width: 100%;
+		padding: 10px;
+		display: block;
+		box-sizing: border-box;
+		z-index: 10;
+	}
+	.header-logo img {
+		width: auto;
+		max-height: 40px;
+	}
+	.header-nav {
+		/*display: none;*/
+		position: fixed;
+		top: 60px;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: 0;
+		background: #FFF;
+		overflow: auto;
+		padding: 20px 10px;
+		border-top: 1px solid;
+	}
+	.menuicon {
+		display: inline-block;
+		width: 44px;
+		height: 44px;
+		padding: 8px;
+		box-sizing: border-box;
+	}
+	.menuicon > span {
+		width: 100%;
+		height: 3px;
+		background: #303030;
+		display: block;
+	}
+	.menuicon > span + span {
+		margin-top: 8px;
+	}
 	.container-inner {
 		display: block;
 	}
@@ -715,30 +776,6 @@ SP
 		overflow: hidden;
 		display: block;
 		box-sizing: border-box;
-	}
-	.header-title > .ttl-lv1 {
-		font-size: 18px;
-	}
-	.header-title > * + * {
-		margin-top: 10px;
-	}
-	.header-outer {
-		position: absolute;
-		height: 60px;
-		top: 0;
-		left: 0;
-		width: 100%;
-		padding: 10px;
-		overflow: hidden;
-		display: block;
-		box-sizing: border-box;
-	}
-	.header-logo img {
-		width: auto;
-		max-height: 40px;
-	}
-	.header-nav {
-		display: none;
 	}
 	.footer > * + *,
 	.footer-content > * + * {
