--- a/theme/dev/style.css
+++ b/theme/dev/style.css
@@ -338,6 +338,9 @@ iframe {
 .header-logo p {
 	color: #333333;
 }
+.header-menu {
+	display: none;
+}
 .header-title {
 	font-weight: bold;
 }
@@ -739,17 +742,20 @@ SP
 		max-height: 40px;
 	}
 	.header-nav {
-		/*display: none;*/
+		width: 100%;
+		height: 100%;
 		position: fixed;
 		top: 60px;
-		left: 0;
-		right: 0;
-		bottom: 0;
+		left: 100%;
 		margin: 0;
 		background: #FFF;
 		overflow: auto;
 		padding: 20px 10px;
 		border-top: 1px solid;
+		transition: left .5s ease;
+	}
+	.is-globalmenu-show .header-nav {
+		left: 0;
 	}
 	.menuicon {
 		display: inline-block;
